--- a/smurfs/package.json
+++ b/smurfs/package.json
@@ -10,6 +10,7 @@
     "react-scripts": "3.0.1",
     "redux": "^4.0.4",
     "redux-thunk": "^2.3.0",
+    "shards-react": "^1.0.3",
     "thunk": "^0.0.1"
   },
   "scripts": {
